@@ -659,6 +659,22 @@ name|apache
 operator|.
 name|ivy
 operator|.
+name|plugins
+operator|.
+name|version
+operator|.
+name|VersionMatcher
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|ivy
+operator|.
 name|util
 operator|.
 name|Message
@@ -3648,6 +3664,62 @@ argument_list|(
 name|node
 argument_list|)
 expr_stmt|;
+name|DependencyDescriptor
+name|dd
+init|=
+name|node
+operator|.
+name|getDependencyDescriptor
+argument_list|()
+decl_stmt|;
+name|VersionMatcher
+name|versionMatcher
+init|=
+name|node
+operator|.
+name|getNode
+argument_list|()
+operator|.
+name|getData
+argument_list|()
+operator|.
+name|getSettings
+argument_list|()
+operator|.
+name|getVersionMatcher
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|dd
+operator|!=
+literal|null
+operator|&&
+operator|!
+operator|(
+name|node
+operator|.
+name|getRoot
+argument_list|()
+operator|==
+name|node
+operator|.
+name|getParent
+argument_list|()
+operator|&&
+name|versionMatcher
+operator|.
+name|isDynamic
+argument_list|(
+name|dd
+operator|.
+name|getDependencyRevisionId
+argument_list|()
+argument_list|)
+operator|)
+condition|)
+block|{
+comment|/*              * we don't resolve conflicts before loading data for direct dependencies on dynamic              * revisions, so that direct dynamic revisions are always resolved, which is mandatory              * for proper replacement of dynamic revisions during 'deliver'              */
 name|resolveConflict
 argument_list|(
 name|node
@@ -3655,6 +3727,7 @@ argument_list|,
 name|conf
 argument_list|)
 expr_stmt|;
+block|}
 if|if
 condition|(
 name|node
